===============================================================================
FITSFileManager Script Changelog
===============================================================================

2015.1.2 - v1.3
- Added defaults for iTelescope
- Small corrections and changes for PI 1.8 1123
- Moved doc to PIDOC
- Internal - support to add/replace keywords
- Corrected exception thown if content of replacement pattern was empty in
  file regexp

-------------------------------------------------------------------------------
2013.10.23 - v1.2
 - Adapted icons to 1.8 stlyle
 - Tested on 1.8.0-1054 (prerelease)
 
-------------------------------------------------------------------------------
2013.04.01 - v1.1
 - Tests on 1.8RC4 preliminary
 - Correct width of labels
 - Assign all controls to the dialog, according to
   http://pixinsight.com/forum/index.php?topic=5252.msg36173#msg36173
 - Added control files to follow PI conventions
 - Log and recover in case of error of formatting
 - Force Math.round to produce integer for Format
 - Added wait cursor for long file operations
 - Made some window smaller to better behavior in small screen and Linux
 - Reworked the check of modified order of input treebox (is not only in the GUI part)
 - Corrected behavior of selection in output box in case of non checked targets

-------------------------------------------------------------------------------
2013.02.06 - v1.0
 - Bug corrections on selection,
 - Made minimum dialog size smaller (hopefully support screens down to approx 1200 x 760)
 - Added shopw/hide fullPath on inputTreeBox
 - Added exit button and confirmation for remove all

-------------------------------------------------------------------------------
2012.12.28 - v0.9
 - Very large rewrite of configuration mecanism

-------------------------------------------------------------------------------
2012.11.19 - v0.8 - Refactor, bug corrections, more configurability